--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li:nth-child(odd) { background: #efefef; }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <ul id="messages"></ul>
