--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body onload="checkCookie()">
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://rafid.w3spaces.com/cookie.js"></script>
 
     <script>
       var socket = io();
@@ -44,6 +45,18 @@
         messages.appendChild(item);
         window.scrollTo(0, document.body.scrollHeight);
       });
+      
+      function checkCookie() {
+        let user = getCookie("username");
+        if (user != "") {
+          alert("Welcome again " + user);
+        } else {
+           user = prompt("Please enter your name:","");
+           if (user != "" && user != null) {
+             setCookie("username", user, 30);
+           }
+        }
+      }
     </script>
   </body>
 </html>
