--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       form.addEventListener('submit', function(e) {
         e.preventDefault();
         if (input.value) {
-          socket.emit('chat message', input.value);
+          socket.emit('chat message', getCookie("username")+input.value);
           input.value = '';
         }
       });
