--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       form.addEventListener('submit', function(e) {
         e.preventDefault();
         if (input.value) {
-          socket.emit('chat message', `: ${input.value}`);
+          socket.emit('chat message', `${input.value}`);
           socket.emit('chat username', `${getCookie("username")}`);
           input.value = '';
         }
@@ -43,7 +43,8 @@
 
       socket.on('chat username', function(_username) {
           socket.on('chat message', function(_msg) {
-            messages.innerHTML+=`<li><span id="username">@${_username}</span>${_msg}</li>`;
+            messages.innerHTML+=`<li><span id="username">@${_username}</span>: ${_msg}</li>`;
+            console.log(`<li><span id="username">@${_username}</span>: ${_msg}</li>`);
             window.scrollTo(0, document.body.scrollHeight);
           });
       });
